v72 - fixed the contacts overflowing the content container in share drop down

--- a/src/Content/Home/MiddleContent/Buttons/ImageShareButton/ShareDropDownStyles.scss
+++ b/src/Content/Home/MiddleContent/Buttons/ImageShareButton/ShareDropDownStyles.scss
@@ -86,6 +86,10 @@
     &-content-container {
         display: flex;
         flex-direction: column;
+
+        height: 28em;
+
+        overflow-y: scroll;
     }
 
     .contact {
@@ -108,7 +112,7 @@
         }
 
         .username {
-            
+
         }
     }
 }
